--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,32 @@
 </head>
 
 <body>
-    <p>Welcome to
-        <%= message %>
+    <p>Prix du bien sur LeBonCoin : 
+        <%= message %>  
+    </p>
+    <p>Type de bien : 
+        <%= message5 %>  
+    </p>
+    <p>Surface du bien :
+        <%= message2 %>
+    </p>
+    <p>Nombre de pièces du bien : 
+        <%= message6 %>
+    </p>
+    <p>Ville du bien : 
+        <%= message3 %>
+    </p>
+    <p>Code postal du bien : 
+        <%= message4 %>
+    </p>
+    <p>Prix du m2 : 
+        <%= message7 %> €
+    </p>
+    <p>Le prix du m2 en moyenne dans cette ville est de : 
+        <%= message8 %>  €
+    </p>
+    <p>
+        <%= message9 %>
     </p>
 </body>
 
