--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,14 +7,22 @@
 </head>
 
 <body>    
+<h1>Comparateur de prix immobilier
+</h1>
+    <p>Veuillez entrer le lien leboncoin de l'annonce : 
+    <form action="/" method="GET">
+     <input type="text" name="lienLBC">
+     <button type="submit">Comparer</button>
+    </form>
+    </p>
     <p>Prix du bien sur LeBonCoin : 
-        <%= message %>  
+        <%= message %> € 
     </p>
     <p>Type de bien : 
         <%= message5 %>  
     </p>
     <p>Surface du bien :
-        <%= message2 %>
+        <%= message2 %> m2 
     </p>
     <p>Nombre de pièces du bien : 
         <%= message6 %>
